# saga-seeker-skill-editor

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  SagaSeekerSkillEditor.spec  build.ps1  pyproject.toml
docs/: HANDOFF.md
docs/adr/: 0001-preserve-source-bytes.md  0002-match-json-and-html-by-position.md  0003-classify-skills-and-repair-ids-conservatively.md  0004-validate-and-save-atomically.md  0005-use-catalog-only-personality-keywords.md  0006-separate-public-and-private-fixtures.md  0007-define-the-v2-character-sheet-contract.md  0008-add-lossy-markdown-interchange-and-profile-comparison.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
scripts/: analyze_private_sheet_schema.py  compare_phase0_roundtrip.py  convert_icon.py  exe_image_smoke.ps1  exe_smoke.ps1  generate_phase0_candidates.py  gui_smoke.py
src/saga_seeker_skill_editor/: __init__.py  __main__.py  main.py  resources.py
src/saga_seeker_skill_editor/core/: __init__.py  character_sheet.py  file_writer.py  json_span.py  (+12 more)
tests/: test_character_sheet_phase2.py  test_character_sheet_v2_model.py  test_file_writer_phase4.py  test_gui_character_sections.py  test_gui_markdown_workflow.py  test_gui_personality.py  test_gui_profile_comparison.py  test_gui_smoke.py  test_gui_states.py  test_gui_v2_workflow.py  test_image_pipeline.py  test_markdown_interchange.py  test_patchers_phase3.py  test_personality_editor.py  test_phase0_candidate_sheet.py  test_phase0_roundtrip.py  test_private_real_html_integration.py  test_sheet_editor_phase4.py  test_theme_manager.py  test_window_preferences.py
(+21 files in other folders)
