[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saga-seeker-skill-editor"
version = "2.0.0"
description = "A local Windows GUI editor for Saga & Seeker character sheets."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Saga & Seeker Skill Editor Contributors" }
]
dependencies = [
  "PySide6>=6.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2"
]
build = [
  "Pillow>=10.4",
  "PyInstaller>=6.8"
]

[project.scripts]
saga-seeker-skill-editor = "saga_seeker_skill_editor.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
saga_seeker_skill_editor = ["gui/styles/*.qss", "data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
